--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Common/TSS"]
-	path = Common/TSS
+[submodule "common/TSS"]
+	path = common/TSS
 	url = git@github.com:SAYaghoubnejad/TSS_lib.git
