remove .vscode from cache

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
 __pycache__
 
-.vscode/settings.json
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
 
 *_config.py
+
+
+venv
+.vscode/settings.json
+.vscode/settings.json
