--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "common/pyfrost"]
-	path = common/pyfrost
-	url = git@github.com:SAYaghoubnejad/pyfrost.git
+[submodule "frost-mpc/common/pyfrost"]
+	path = frost-mpc/common/pyfrost
+	url = https://github.com/SAYaghoubnejad/pyfrost.git
